revert to dog.craftz.sqlite_2 for now

--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,4 +1,4 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.reactnativesqlite2">
+          package="dog.craftz.sqlite_2">
 
 </manifest>
